--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
-  jupyterlab:
-    build:
-      dockerfile: Dockerfile
-    env_file:
-      - .env
-    ports:
-      - "8888:8888"
-    volumes:
-      - ./project:/project
-    networks:
-      - containernetwork
+  # jupyterlab:
+  #   build:
+  #     dockerfile: Dockerfile
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - "8888:8888"
+  #   volumes:
+  #     - ./project:/project
+  #   networks:
+  #     - containernetwork
   postgres:
     image: postgres:latest
     env_file:
